--- a/templates/edit_customer_data.html
+++ b/templates/edit_customer_data.html
@@ -539,11 +539,10 @@ body {
         <label for="status">สถานะ</label>
         <select id="status" name="status" required>
             <option value="" disabled>--- เลือกสถานะ ---</option>
-            <option value="อนุมัติ" {% if customer_data.get('สถานะ') == 'อนุมัติ' %}selected{% endif %}>อนุมัติ</option>
+            <option value="รอดำเนินการ" {% if customer_data.get('สถานะ') == 'รอดำเนินการ' %}selected{% endif %}>รอดำเนินการ</option>
             <option value="ไม่อนุมัติ" {% if customer_data.get('สถานะ') == 'ไม่อนุมัติ' %}selected{% endif %}>ไม่อนุมัติ</option>
+            <option value="อนุมัติ" {% if customer_data.get('สถานะ') == 'อนุมัติ' %}selected{% endif %}>อนุมัติ</option>
             <option value="ยกเลิก" {% if customer_data.get('สถานะ') == 'ยกเลิก' %}selected{% endif %}>ยกเลิก</option>
-            <option value="รออนุมัติยอด" {% if customer_data.get('สถานะ') == 'รออนุมัติยอด' %}selected{% endif %}>รออนุมัติยอด</option>
-            <option value="อยู่ระหว่างดำเนินการ" {% if customer_data.get('สถานะ') == 'อยู่ระหว่างดำเนินการ' %}selected{% endif %}>อยู่ระหว่างดำเนินการ</option>
         </select>
     </div>
 
